tests/asm/error/header_double_comments.s
.comment ""
.comment ""



live	%1
